--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.24MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: 167.88.62.68, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-173.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.75MB/s(Youtube:不良林), server: 43.154.235.119, port: 10064, type: vmess, uuid: 8b115f89-27cc-4ea9-85af-dda2de597928, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.19MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-2.72MB/s(Youtube:不良林), server: bgpv2.ktyjsq.com, port: 12222, type: vmess, uuid: eddbceb6-a19e-324a-86ed-ecf4fe041656, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 捷克-542.7KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-631.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.19MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-188.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: 167.88.62.68, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林) 2, server: 167.88.62.68, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: 167.88.62.68, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.15MB/s(Youtube:不良林), server: 167.88.62.68, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
-      - 捷克-542.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-631.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
-      - 捷克-542.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-631.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
-      - 捷克-542.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-631.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
-      - 捷克-542.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-631.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
-      - 捷克-542.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-631.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
-      - 捷克-542.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-631.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-173.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
-      - 捷克-542.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-631.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
+      - 🇨🇳 中国-188.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
