--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-258.8KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-426.0KB/s(Youtube:不良林), server: ss.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss.2046.gq, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.71MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.08MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.27MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 2c2b076e-42c1-4761-9b5c-1800ba829e1a, sni: ss2.2046.gq, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-969.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
   - {name: 🇺🇸 美国-2.94MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.02MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-5.11MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.61MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.82MB/s(Youtube:不良林), server: hinet.52147.top, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hinet.52147.top, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.85MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-153.8KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-827.4KB/s(Youtube:不良林), server: 625tw01.fx6688.top, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 625tw01.fx6688.top}}
+  - {name: 🇫🇷 法国-458.6KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-258.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-969.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-827.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-458.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-258.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-969.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-827.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-458.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-258.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-969.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-827.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-458.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-258.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-969.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-827.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-458.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-258.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-969.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-827.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-458.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-258.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-969.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-827.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-458.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-258.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-969.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-153.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-827.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-458.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
